Fix: Restore missing buttons and improve error handling
- Fix missing save/redraw functionality in web interface
- Add proper element existence checking in JavaScript
- Update .gitignore to exclude Python bot files from GitHub
- Keep Python bot files local only as requested
- Ensure all buttons (Save, Redraw, Confirm) are functional

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,13 @@ build/
 coverage/
 *.tgz
 *.tar.gz
+
+# Python bot files (keep local only)
+telegram_bot.py
+requirements.txt
+signatures/
+user_data_*.json
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
